src/snapshots/varnishls__formatter__tests__snapshots@002_new_statements.vcl.snap
---
source: src/formatter.rs
expression: "format(input, &config)"
input_file: src/formatter_tests/002_new_statements.vcl
---
import brotli;
import goto;

sub vcl_init {
    new api = directors.round_robin();
    new frontends = directors.round_robin();
    brotli.init();
}
