src/snapshots/varnishls__formatter__tests__snapshots@005_huge_func_args.vcl.snap
---
source: src/formatter.rs
expression: "format(input, &config).unwrap()"
input_file: src/formatter_tests/005_huge_func_args.vcl
---
sub set_cookie {
    header.append(
        beresp.http.set-cookie,
        "my_cookie=" +
            bereq.http.x-my-cookie +
            "; domain=" +
            bereq.http.host +
            ";max-age=" +
            bereq.http.x-mycookie-age +
            "; path=/"
    )
}
